Working role verify, users and library done for now.
