# backend/routes/library.js
@@ -1,0 +1,15 @@
+const express = require('express');
+const libraryController = require('../controllers/library');
+const validate = require('../middleware/validation');
+const router = express.Router();
+
+router
+    .get('/', libraryController.getList)
+    .get('/:id', libraryController.getSingle)
+    .put('/checkout/:id', libraryController.checkoutBook)
+    .post('/', validate.validateBook, libraryController.addBook)
+    .put('/:id', validate.validateBook, libraryController.updateBook)
+    .delete('/:id', libraryController.deleteBook)
+
+
+module.exports = router;
